--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         Finance-Quote-Sberbank
-version:      0.02
+version:      0.03
 version_from: lib/Finance/Quote/Sberbank.pm
 installdirs:  site
 requires:
     Finance::Quote:                0
-    Spreadsheet::Read:             0
+    Spreadsheet::ParseExcel:       0
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+generated_by: ExtUtils::MakeMaker version 6.30
