--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,23 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Finance-Quote-Sberbank
-version:      0.03
-version_from: lib/Finance/Quote/Sberbank.pm
-installdirs:  site
+--- #YAML:1.0
+name:               Finance-Quote-Sberbank
+version:            0.04
+abstract:           Obtain quotes from Sberbank (Savings Bank of
+author:
+    - Alexander Korolyoff <kilork@yandex.ru>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    Finance::Quote:                0
-    Spreadsheet::ParseExcel:       0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    Finance::Quote:       0
+    Spreadsheet::ParseExcel:  0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.55_02
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
